# finiate

./: cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
domain/: Cargo.toml
domain/src/: agenda.rs  lib.rs  log.rs
storage/: Cargo.toml
storage/migrations/: 20260201041058_init.sql
storage/src/: db.rs  lib.rs
storage/src/repo/: agenda_repo.rs  log_repo.rs  mod.rs  repo_error.rs
